--- a/roxs-voting-app/worker/package.json
+++ b/roxs-voting-app/worker/package.json
@@ -14,7 +14,8 @@
     "express": "^4.18.3",
     "ioredis": "^5.3.2",
     "pg": "^8.11.3",
-    "prom-client": "^15.1.0"
+    "prom-client": "^15.1.0",
+    "pm2": "^5.3.0"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
