--- a/.github/workflows/deploy-compose.yml
+++ b/.github/workflows/deploy-compose.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Parar servicios anteriores
-      run: docker compose down -v || true
+      run: docker compose -f roxs-voting-app/docker-compose.yml down -v || true
 
     - name: Construir servicios
       run: docker compose -f roxs-voting-app/docker-compose.yml build
