probando con cambiar el shell default

--- a/.github/workflows/deploy-compose.yml
+++ b/.github/workflows/deploy-compose.yml
@@ -17,6 +17,7 @@ jobs:
  #     run: cd "${GITHUB_WORKSPACE}" && docker compose -f roxs-voting-app/docker-compose.yml down -v || true
     - name: Parar servicios anteriores
       working-directory: ./roxs-voting-app
+      shell: bash
       run: docker compose -f docker-compose.yml down -v || true
 
     - name: Construir servicios
