workflow de monitoreo en self hosted

--- a/.github/workflows/monitore.yml
+++ b/.github/workflows/monitore.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   check-app:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, myke]
 
     steps:
     - name: Chequear estado
